--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -43,6 +43,7 @@
         height: 1px
         background-color: $text-color
   .hotel
+    padding-top: 5px
     &-info
       width: 100%
       &-text
